Update affiliations to use both path and query API endpoints
